Home & Contact pages Basic CSS

--- a/TheLocalGeekery/TheLocalGeekery.csproj
+++ b/TheLocalGeekery/TheLocalGeekery.csproj
@@ -195,6 +195,9 @@
     <Content Include="Assets\images\chocoFrogsIcon.jpg" />
     <Content Include="Assets\images\fishFingersCustardFull.jpg" />
     <Content Include="Assets\images\fishFingersCustardIcon.jpg" />
+    <Content Include="Assets\images\googleMaps.JPG" />
+    <Content Include="Assets\images\interior1.JPG" />
+    <Content Include="Assets\images\interior2.JPG" />
     <Content Include="Assets\images\lembasBreadFull.jpg" />
     <Content Include="Assets\images\lembasBreadIcon.jpg" />
     <Content Include="Assets\images\nukaColaFull.jpg" />
@@ -261,7 +264,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
